--- a/Modules/01. Initialization/LoginAcmeSystem.xaml
+++ b/Modules/01. Initialization/LoginAcmeSystem.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="LoginAcmeSystem" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:s="clr-namespace:System;assembly=System.Private.CoreLib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:ss="clr-namespace:System.Security;assembly=System.Private.CoreLib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:uix="http://schemas.uipath.com/workflow/activities/uix" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="LoginAcmeSystem" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:p="http://schemas.uipath.com/workflow/activities/credentials" xmlns:s="clr-namespace:System;assembly=System.Private.CoreLib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:ss="clr-namespace:System.Security;assembly=System.Private.CoreLib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:uix="http://schemas.uipath.com/workflow/activities/uix" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
     <x:Property sap2010:Annotation.AnnotationText="Dictionary structure to store configuration data of the process (settings, constants and assets)." Name="in_Dic_Config" Type="InArgument(scg:Dictionary(x:String, x:Object))" />
     <x:Property Name="out_Bool_LoginSuccess" Type="OutArgument(x:Boolean)" />
@@ -51,6 +51,8 @@
       <x:String>UiPath.UIAutomationNext.Models.CV</x:String>
       <x:String>System.Activities.Runtime.Collections</x:String>
       <x:String>System.Net</x:String>
+      <x:String>CredentialManagement</x:String>
+      <x:String>UiPath.Credentials.Activities</x:String>
     </sco:Collection>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
@@ -115,9 +117,17 @@
       <AssemblyReference>System.Net.WebHeaderCollection</AssemblyReference>
       <AssemblyReference>System.Net.Requests</AssemblyReference>
       <AssemblyReference>System.Net.ServicePoint</AssemblyReference>
+      <AssemblyReference>netstandard</AssemblyReference>
+      <AssemblyReference>CredentialManagement</AssemblyReference>
+      <AssemblyReference>UiPath.Credentials.Activities</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="This module is used to Login in ACME system." DisplayName="LoginAcmeSystem" sap:VirtualizedContainerService.HintSize="1249,2631" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="This module is used to Login in ACME system." DisplayName="LoginAcmeSystem" sap:VirtualizedContainerService.HintSize="785,2669" sap2010:WorkflowViewState.IdRef="Sequence_1">
+    <Sequence.Variables>
+      <Variable x:TypeArguments="ss:SecureString" Name="Scr_SecurePassword" />
+      <Variable x:TypeArguments="ss:SecureString" Name="Scr_Password" />
+      <Variable x:TypeArguments="x:String" Name="Str_Email" />
+    </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -125,25 +135,23 @@
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
     <ui:LogMessage DisplayName="Log Message - Print Module Start [LoginAcmeSystem]" sap:VirtualizedContainerService.HintSize="785,173" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Info" Message="[&quot;[LoginAcmeSystem] --&gt; Process starting...&quot;]" />
-    <TryCatch DisplayName="Try Catch - Login ACME System" sap:VirtualizedContainerService.HintSize="785,2240" sap2010:WorkflowViewState.IdRef="TryCatch_1">
+    <p:GetSecureCredential CredentialType="Generic" DisplayName="Get Secure Credentials - Store In Windows Credentials Manager [LoginAcmeSystem]" sap:VirtualizedContainerService.HintSize="785,112" sap2010:WorkflowViewState.IdRef="GetSecureCredential_1" Password="[Scr_Password]" PersistanceType="Enterprise" Target="[in_Dic_Config(&quot;ACME_CredentialAssetNameInWindowsCredentialsManager&quot;).ToString]" Username="[Str_Email]" />
+    <TryCatch DisplayName="Try Catch - Login ACME System" sap:VirtualizedContainerService.HintSize="785,2166" sap2010:WorkflowViewState.IdRef="TryCatch_1">
       <TryCatch.Try>
-        <uix:NApplicationCard AttachMode="ByInstance" CloseMode="Never" DisplayName="Use Application: Chrome Browser - ACME Login" sap:VirtualizedContainerService.HintSize="783,1503" sap2010:WorkflowViewState.IdRef="NApplicationCard_1" InteractionMode="Simulate" OpenMode="IfNotOpen" ScopeGuid="8c5aa7b0-bb6e-4d8c-a802-c7437354bf6d" Version="V2" WindowResize="Maximize">
+        <uix:NApplicationCard AttachMode="ByInstance" CloseMode="Never" DisplayName="Use Application: Chrome Browser - ACME Login" sap:VirtualizedContainerService.HintSize="783,1429" sap2010:WorkflowViewState.IdRef="NApplicationCard_1" InteractionMode="Simulate" OpenMode="IfNotOpen" ScopeGuid="8c5aa7b0-bb6e-4d8c-a802-c7437354bf6d" Version="V2" WindowResize="Maximize">
           <uix:NApplicationCard.Body>
             <ActivityAction x:TypeArguments="x:Object">
               <ActivityAction.Argument>
                 <DelegateInArgument x:TypeArguments="x:Object" Name="WSSessionData" />
               </ActivityAction.Argument>
-              <Sequence DisplayName="Do - Login in ACME System" sap:VirtualizedContainerService.HintSize="749,1286" sap2010:WorkflowViewState.IdRef="Sequence_2">
-                <Sequence.Variables>
-                  <Variable x:TypeArguments="ss:SecureString" Name="Scr_SecurePassword" />
-                </Sequence.Variables>
+              <Sequence DisplayName="Do - Login in ACME System" sap:VirtualizedContainerService.HintSize="749,1172" sap2010:WorkflowViewState.IdRef="Sequence_2">
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                     <x:Boolean x:Key="IsPinned">False</x:Boolean>
                   </scg:Dictionary>
                 </sap:WorkflowViewStateService.ViewState>
-                <uix:NTypeInto ActivateBefore="True" ClickBeforeMode="None" DisplayName="Type Into - Email" EmptyFieldMode="SingleLine" sap:VirtualizedContainerService.HintSize="715,250" sap2010:WorkflowViewState.IdRef="NTypeInto_1" ScopeIdentifier="8c5aa7b0-bb6e-4d8c-a802-c7437354bf6d" Text="[in_Dic_Config(&quot;Email&quot;).ToString]" Version="V4">
+                <uix:NTypeInto ActivateBefore="True" ClickBeforeMode="None" DisplayName="Type Into - Email" EmptyFieldMode="SingleLine" sap:VirtualizedContainerService.HintSize="715,250" sap2010:WorkflowViewState.IdRef="NTypeInto_1" ScopeIdentifier="8c5aa7b0-bb6e-4d8c-a802-c7437354bf6d" Text="[Str_Email]" Version="V4">
                   <uix:NTypeInto.Target>
                     <uix:TargetAnchorable BrowserURL="acme-test.uipath.com/login" ContentHash="IQO7YIuMm0SWPhMugUCqBQ" DesignTimeRectangle="184, 426, 485, 34" DesignTimeScaleFactor="1" ElementType="InputBox" FuzzySelectorArgument="&lt;webctrl id='email' tag='INPUT' type='email' class='form-control ' aaname='Email:' /&gt;" Guid="867a5dc4-d6b5-43ab-b79b-0cd213de03d9" ImageBase64="" InformativeScreenshot="b7681772c8d8de3ff7a1e917e316b706.png" IsResponsive="True" Reference="b8xXgZ4zaU-qNOZPsChwJg/43iOAfoKMEW_GLTopCZ-8Q" ScopeSelectorArgument="&lt;html app='chrome.exe' title='ACME System 1 - Log In' /&gt;" SearchSteps="FuzzySelector" Version="V4" Visibility="Interactive">
                       <uix:TargetAnchorable.Anchors>
@@ -154,15 +162,7 @@
                     </uix:TargetAnchorable>
                   </uix:NTypeInto.Target>
                 </uix:NTypeInto>
-                <Assign DisplayName="Assign - &lt;Scr_SecurePassword&gt; [LoginAcmeSystem]" sap:VirtualizedContainerService.HintSize="715,114" sap2010:WorkflowViewState.IdRef="Assign_1">
-                  <Assign.To>
-                    <OutArgument x:TypeArguments="ss:SecureString">[Scr_SecurePassword]</OutArgument>
-                  </Assign.To>
-                  <Assign.Value>
-                    <InArgument x:TypeArguments="ss:SecureString">[new System.Net.NetworkCredential(string.Empty, in_Dic_Config("Password").ToString).SecurePassword]</InArgument>
-                  </Assign.Value>
-                </Assign>
-                <uix:NTypeInto ActivateBefore="True" ClickBeforeMode="None" DisplayName="Type Into - Password" EmptyFieldMode="SingleLine" sap:VirtualizedContainerService.HintSize="715,250" sap2010:WorkflowViewState.IdRef="NTypeInto_3" IsPassword="True" ScopeIdentifier="8c5aa7b0-bb6e-4d8c-a802-c7437354bf6d" SecureText="[Scr_SecurePassword]" Version="V4">
+                <uix:NTypeInto ActivateBefore="True" ClickBeforeMode="None" DisplayName="Type Into - Password" EmptyFieldMode="SingleLine" sap:VirtualizedContainerService.HintSize="715,250" sap2010:WorkflowViewState.IdRef="NTypeInto_3" IsPassword="True" ScopeIdentifier="8c5aa7b0-bb6e-4d8c-a802-c7437354bf6d" SecureText="[Scr_Password]" Version="V4">
                   <uix:NTypeInto.Target>
                     <uix:TargetAnchorable BrowserURL="acme-test.uipath.com/login" ContentHash="q0liBgdTHkGpJEe4q4VAyw" DesignTimeRectangle="184, 500, 485, 34" DesignTimeScaleFactor="1" ElementType="InputBoxPassword" FuzzySelectorArgument="&lt;webctrl id='password' tag='INPUT' type='password' class='form-control ' aaname='Password:' /&gt;" Guid="ab7485e1-765e-4aad-bd25-5ba674435962" ImageBase64="" InformativeScreenshot="b1a6190e978d556c8ebf57e5caedf879.png" Reference="b8xXgZ4zaU-qNOZPsChwJg/x0lodx1R9EGJRj4gV2ZfMw" ScopeSelectorArgument="&lt;html app='chrome.exe' title='ACME System 1 - Log In' /&gt;" SearchSteps="FuzzySelector" Version="V4" Visibility="Interactive">
                       <uix:TargetAnchorable.Anchors>
